--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     margin-top: 0px;
-    
 }
 *{
     scroll-behavior: smooth;
@@ -20,10 +19,8 @@ main{
     align-items: center;
     position: sticky;
     top: 0px;
-
 }
 .search-bar{
-   
 }
 .search-bar input{
     padding: 11px;
@@ -33,7 +30,6 @@ main{
     border: none;
     background-color: #ffff;
 }
-
 .search-bar i{
 position: absolute;
   top: 25px;
@@ -42,26 +38,20 @@ position: absolute;
 .item-section{
     display: flex;
     gap: 20px;
-
-
 }
 ul{
  display: flex;
     gap: 20px;
     flex: 1;
-   
 }
 .item-section li{
     list-style: none;
     font-size: 16px;
     font-family: poppins;
-   
-
 }
 .item-section li a {
     text-decoration: none;
     color: #707070;
-
 }
 
 /* banar-section */
@@ -72,7 +62,6 @@ ul{
     padding: 20px;
     margin-top: 25px;
 }
-
 .banar-section{
     display: flex;
     justify-content: center;
@@ -82,7 +71,6 @@ ul{
     align-items: center;
     border-radius: 15px;
 }
-
 .banar-text{
     margin-bottom:30px;
 }
@@ -93,7 +81,6 @@ ul{
     color: #1f1f1f;
     margin-bottom: 10px;
 }
-
 .banar-text span{
     font-family: inter;
     font-size:16px;
@@ -102,14 +89,10 @@ ul{
     display: block;
     margin-bottom: 20px;
     color: #4e4e4e;
-
-    
 }
-
 .banar-img img{
     height: 390px;
 }
-
 .banar-text h3{
     font-weight: 500px;
     font-size: 41px;
@@ -117,7 +100,6 @@ ul{
     font-family: poppins;
     margin-bottom: 5px;
 }
-
 .panda-btn{
     font-family: inter;
     font-weight: 500px;
@@ -127,16 +109,12 @@ ul{
     border-radius: 5px;
     padding: 20px 35px;
 }
-
-
-
 .box-item {
     display: flex;
     justify-content: center;
     gap:40px;
 
 }
-
 .categories h1{
     font-size: 36px;
     color: #1f1f1f;
@@ -144,7 +122,6 @@ ul{
     margin-bottom: 15px;
 
 }
-
 .categories-box{
    display: flex;
    gap:5px;
@@ -154,34 +131,24 @@ ul{
    justify-content: space-between;
    padding: 30px;
    border-radius: 10px;
-    position: sticky;
-    top: 0px;
-
-
 }
-
 .categories-box h2{
     font-size: 36px;
     font-family: poppins;
-
 }
-
 .categories-box img{
     height: 90px;
 }
-
 .categories-box:nth-child(1){
    background: linear-gradient(151.85deg, rgb(255, 156, 53) 14.537%,rgb(255, 208, 25) 84.486%);
 }
-
 .categories-box:nth-child(2){
 /* Linear */
-background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);}
-
+background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
+}
 .categories-box:nth-child(3){
 background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248) 74.29%);
 }
-
 .shose-and-bag-parent{
     width: 1440px;
     background-color: #f4f4f4;
@@ -192,35 +159,26 @@ background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248)
     align-items: center;
     margin: 0px 70px;
 }
-
 .shos-bag-title h3{
     font-size: 36px;
     font-weight: 600;
     font-family: poppins;
     color: #1f1f1f;
-
 }
-
 .shos-bag-title p{
     font-size: 20px;
     font-family: poppins;
     color: #ff9d00;
 }
-
 .shos-card-containar{
     display: flex;
     justify-content: center;
     gap: 20px;
     flex: 1;
-
-
 }
-
 .backpack{
     margin-bottom: 55px;
-
 }
-
 .card {
     width: 335px;
     background-color: #ffff;
@@ -229,16 +187,12 @@ background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248)
     box-sizing: border-box;
     border-radius: 10px;
 }
-
 .card img{
     width: 290px;
     height: 185px;
     margin: auto;
     margin-left: -33px;
-
-
 }
-
 .card h2{
     font-size: 24px;
     font-weight: 600;
@@ -247,17 +201,12 @@ background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248)
     margin-bottom:  15px;
     margin-top: 0px;
 }
-
 .card span{
     font-family: inter;
     color: #4e4e4e80;
     padding-bottom:  0px;
     padding-top: 15px;
-
-
-
 }
-
 .prais h2{
     font-size: 24px;
     font-family: poppins;
@@ -266,7 +215,6 @@ background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248)
   display: block;
   padding-bottom: 0px;
 }
-
 .by-button{
     background-color: #000000;
     font-family: inter;
@@ -275,27 +223,20 @@ background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248)
     color: #f4f4f4;
     margin-top: 0px;
 }
-
 #bag{
     height: 300px;
 }
-
 .footer-box{
     background-color: #fff2f1;
-text-align: center;
-align-items: center;
+    text-align: center;
+    align-items: center;
     padding: 150px 20px;
-
-   
-
-
+    border-radius: 10px;
 }
-
 footer{
      padding: 33px 180px ;
     box-sizing: border-box;
 }
-
 .footer-box h1{
     font-size: 30px;
     font-family: poppins;
@@ -303,14 +244,12 @@ footer{
     color: #1f1f1f;
     margin-bottom: 0px;
 }
-
 .footer-box span {
     font-family: poppins;
     color: #707070;
     margin-bottom: 10px;
     display: block;
 }
-
 .input-section{
     display: flex;
     justify-content: center;
@@ -323,7 +262,6 @@ footer{
     padding-right: 255px;
     border: none;
     border-radius: 50px 0px 0px 50px;
-
 }
 #in-b{
     border-radius: 0px 50px 50px 0px;
